Change fields information
