# app/Http/Controllers/FieldController.php
@@ -12,13 +12,18 @@ class FieldController extends Controller
      *     tags={"field"},
      *     path="/field/create",
      *     summary="Создаёт кастомные поля",
+     *     description="type=1 - текст (AMOCRM.cf_types), element_type=2 - сделка (AMOCRM.element_types)",
      *     @OA\RequestBody(
      *         @OA\MediaType(
      *             mediaType="application/json",
      *             @OA\Schema(
      *                 type="array",
      *                 @OA\Items(
-     *                     example={"name": "Custom field name"}
+     *                     example={
+     *                         "name": "Custom field name",
+     *                         "type": 1,
+     *                         "element_type": 2
+     *                     }
      *                 )
      *             )
      *         )
@@ -36,8 +41,15 @@ class FieldController extends Controller
             'message' => 'Успешно выполнено',
             'result' => [
                 'response' => [
-                    'fields' => null,
-                    'server_time' => 1644734017
+                    'fields' => [
+                        'add' => [
+                            [
+                                'id' => '1520093',
+                                'request_id' => 0
+                            ]
+                        ]
+                    ],
+                    'server_time' => 1644831005
                 ]
             ],
             'count' => 1
